[package]
name = "ffi_callback_unwind"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = [ "full" ] }
quote = "1.0"
proc-macro2 = "1.0"