[package]
name = "ffi_wrapper_nounwind"
version = "0.1.0"
authors = ["Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"]
edition = "2018"
description = "Automatically generate FFI wrappers that catch unwinding from FFI into Rust."
repository = "https://github.com/gnzlbg/ffi_wrapper_nounwind.git"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "1.0", features = [ "full" ] }
quote = "1.0"
proc-macro2 = "1.0"